--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "pug": "^2.0.0-rc.2"
   },
   "devDependencies": {
+    "babel-eslint": "^7.2.3",
+    "eslint": "^4.1.1",
+    "eslint-config-google": "^0.8.1",
     "nodemon": "^1.11.0"
   }
 }
