--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
   "dependencies": {
     "body-parser": "^1.17.2",
     "bootstrap": "^3.3.7",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.3",
     "express": "^4.15.3",
+    "express-messages": "^1.0.1",
     "express-session": "^1.15.3",
     "gulp": "^3.9.1",
     "gulp-nodemon": "^2.2.1",
+    "mongodb": "^2.2.30",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "pug": "^2.0.0-rc.2"
