--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express-session": "^1.15.3",
     "gulp": "^3.9.1",
     "gulp-nodemon": "^2.2.1",
+    "jquery": "^3.2.1",
     "mongodb": "^2.2.30",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
