--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
   },
   "dependencies": {
     "body-parser": "^1.17.2",
-    "bootstrap": "^3.3.7",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^1.3.2",
     "cookie-parser": "^1.4.3",
@@ -27,6 +26,7 @@
     "gulp": "^3.9.1",
     "gulp-nodemon": "^2.2.1",
     "jquery": "^3.2.1",
+    "materialize-css": "^0.99.0",
     "mongodb": "^2.2.30",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
