--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jquery": "^3.2.1",
     "materialize-css": "^0.99.0",
     "mongodb": "^2.2.30",
+    "multer": "^1.3.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "pug": "^2.0.0-rc.2"
