--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "multer": "^1.3.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
-    "pug": "^2.0.0-rc.2"
+    "pug": "^2.0.0-rc.2",
+    "socket.io": "^2.0.3"
   },
   "devDependencies": {
     "babel-eslint": "^7.2.3",
