--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.15.3",
     "express-messages": "^1.0.1",
     "express-session": "^1.15.3",
+    "express-toastr": "^2.0.2",
     "gulp": "^3.9.1",
     "gulp-nodemon": "^2.2.1",
     "jquery": "^3.2.1",
