--- a/package.json
+++ b/package.json
@@ -17,28 +17,43 @@
   },
   "dependencies": {
     "body-parser": "^1.17.2",
+    "chromedriver": "^2.31.0",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^1.3.2",
     "cookie-parser": "^1.4.3",
+    "dargs": "^5.1.0",
+    "execa": "^0.7.0",
     "express": "^4.15.3",
     "express-messages": "^1.0.1",
     "express-session": "^1.15.3",
     "express-toastr": "^2.0.2",
+    "fast-deep-equal": "^1.0.0",
     "gulp": "^3.9.1",
     "gulp-nodemon": "^2.2.1",
     "jquery": "^3.2.1",
+    "lru-cache": "^4.1.1",
     "materialize-css": "^0.99.0",
     "mongodb": "^2.2.30",
     "multer": "^1.3.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "pug": "^2.0.0-rc.2",
+    "sigmund": "^1.0.1",
     "socket.io": "^2.0.3"
   },
   "devDependencies": {
     "babel-eslint": "^7.2.3",
-    "eslint": "^4.2.0",
+    "chai": "^4.1.0",
+    "eslint": "^4.3.0",
     "eslint-config-google": "^0.8.1",
-    "nodemon": "^1.11.0"
+    "gulp-istanbul": "^1.1.2",
+    "gulp-mocha": "3",
+    "istanbul": "^0.4.5",
+    "json-schema-traverse": "^0.3.1",
+    "mocha": "^3.4.2",
+    "nodemon": "^1.11.0",
+    "selenium-webdriver": "^3.5.0",
+    "sinon": "^2.4.0",
+    "supertest": "^3.0.0"
   }
 }
