--- a/.eslintrc
+++ b/.eslintrc
@@ -13,6 +13,7 @@
             "error",
             "always"
         ],
+        "switch-colon-spacing": 0,
         "semi": 2,
         "no-undef": 2,
         "no-use-before-define": 0,
