--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "nodemon": "^1.11.0",
     "selenium-webdriver": "^3.5.0",
     "sinon": "^2.4.0",
+    "superagent": "^3.5.2",
     "supertest": "^3.0.0"
   }
 }
